<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_request_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_request_phone_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_code"
            android:enabled="false"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/phone_request_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_code" />

    <Button
        android:id="@+id/phone_request_validate_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate_code"
        android:enabled="false"/>

</LinearLayout>
